更换前端为chainlit

--- a/agents/.env
+++ b/agents/.env
@@ -12,3 +12,6 @@ STREAMLIT_PORT=8501
 
 # Vector Database
 CHROMA_PERSIST_DIR=./data/chroma
+
+DATABASE_URL=sqlite+aiosqlite:///chainlit.db
+CHAINLIT_AUTH_SECRET=92C5B4E0A1D3F6G8H7I5J4K3L2M1N0O9P8Q7R6S5T4U3V2W1
