--- a/agents/requirements.txt
+++ b/agents/requirements.txt
@@ -3,8 +3,8 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
 
-# Streamlit Frontend
-streamlit>=1.29.0
+# Chainlit Frontend (高性能替代方案)
+chainlit>=2.0.0
 
 # LangChain & AI
 langchain>=0.1.0
@@ -14,6 +14,11 @@ langgraph>=0.2.0
 
 # PDF Processing
 pypdf>=4.0.0
+
+# Document Processing (Expanded)
+docx2txt>=0.8
+unstructured>=0.11.0
+python-magic-bin>=0.4.14 ; sys_platform == 'win32'
 
 # Vector Database
 chromadb>=0.4.0
